--- a/reviews.html
+++ b/reviews.html
@@ -47,25 +47,25 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="index.html">
+                    <a class="nav-link link text-black display-7" href="index.html">
                         Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="about.html">
+                    <a class="nav-link link text-black display-7" href="about.html">
                         About Us
                     </a>
-                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="products.html">
-                        Products</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="media.html">
-                        Media</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="community.html">
-                        Community</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="reviews.html">
-                        Reviews</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="contact.html">
+                </li><li class="nav-item"><a class="nav-link link text-black display-7" href="products.html">
+                        Products</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="media.html">
+                        Media</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="community.html">
+                        Community</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="reviews.html">
+                        Reviews</a></li><li class="nav-item"><a class="nav-link link text-black display-7" href="contact.html">
                         Contact</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><section class="mbr-section content5 cid-r6QfMYdPT0" id="content5-4g">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="mbr-section content5 cid-r6QfMYdPT0" id="content5-4g">
 
     
 
